<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/registration_page__arrow_left_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            style="@style/icon_btn"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/registration_page__logo_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/cat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/registration_page__registration_card"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/registration_page__registration_card"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                app:layout_constraintBottom_toTopOf="@id/registration_page__create_account_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginHorizontal="18dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                        <TextView
                                android:id="@+id/registration_page__name_string"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toTopOf="@id/registration_page__name_edit_text"
                                android:layout_marginStart="20dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/user_name"
                                android:textStyle="bold"
                                android:textSize="15sp"/>

                        <EditText
                                android:id="@+id/registration_page__name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:autofillHints="name"
                                android:inputType="text"
                                android:hint="@string/user_name_hint"
                                android:layout_marginHorizontal="18dp"
                                app:layout_constraintTop_toBottomOf="@id/registration_page__name_string"
                                app:layout_constraintBottom_toTopOf="@id/registration_page__email_string"/>

                        <TextView
                                android:id="@+id/registration_page__email_string"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:layout_constraintTop_toBottomOf="@id/registration_page__name_edit_text"
                                app:layout_constraintBottom_toTopOf="@id/registration_page__email_edit_text"
                                app:layout_constraintLeft_toLeftOf="parent"
                                android:layout_marginStart="20dp"
                                android:text="@string/email"
                                android:textStyle="bold"
                                android:textSize="15sp"/>

                        <EditText
                            android:id="@+id/registration_page__email_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints="name"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email_hint"
                            android:layout_marginHorizontal="18dp"
                            app:layout_constraintTop_toBottomOf="@id/registration_page__email_string"
                            app:layout_constraintBottom_toTopOf="@id/registration_page__password_string"/>

                        <TextView
                            android:id="@+id/registration_page__password_string"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/registration_page__email_edit_text"
                            app:layout_constraintBottom_toTopOf="@id/registration_page__password_edit_text"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginStart="20dp"
                            android:text="@string/password"
                            android:textStyle="bold"
                            android:textSize="15sp"/>

                        <EditText
                            android:id="@+id/registration_page__password_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints="password"
                            android:inputType="textPassword"
                            android:hint="@string/password_hint"
                            android:layout_marginHorizontal="18dp"
                            app:layout_constraintTop_toBottomOf="@id/registration_page__password_string"
                            app:layout_constraintBottom_toTopOf="@id/registration_page__password_again_string"/>

                        <TextView
                            android:id="@+id/registration_page__password_again_string"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/registration_page__password_edit_text"
                            app:layout_constraintBottom_toTopOf="@id/registration_page__password_again_edit_text"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginStart="20dp"
                            android:text="@string/password_again"
                            android:textStyle="bold"
                            android:textSize="15sp"/>

                        <EditText
                            android:id="@+id/registration_page__password_again_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:autofillHints="password"
                            android:inputType="textPassword"
                            android:hint="@string/password_again_hint"
                            android:layout_marginHorizontal="18dp"
                            app:layout_constraintTop_toBottomOf="@id/registration_page__password_again_string"
                            app:layout_constraintBottom_toBottomOf="parent"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/registration_page__create_account_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/create_account"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="18dp"
            style="@style/turquoise_btn" />

        <Button
                android:id="@+id/registration_page__login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/already_have_an_account"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_page__create_account_button"
                android:layout_marginBottom="50dp"
                android:layout_marginHorizontal="18dp"
                style="@style/white_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>