<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="8dp"
        android:paddingHorizontal="13dp">

    <Button
            android:id="@+id/login_page__arrow_left_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="5dp"
            style="@style/icon_btn" />

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_page__logo_image"
            android:layout_marginTop="48dp"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@color/brick"
            app:layout_constraintBottom_toTopOf="@id/login_page__login_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_page__arrow_left_button"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/login_page__login_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="5dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp">

            <TextView
                    android:textColor="@color/main_dark_grey"
                    android:id="@+id/login_page__email_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/login_page__email_edit_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="15sp" />

            <EditText
                    style="@style/fragment_profile_field_text"
                    android:id="@+id/login_page__email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    app:layout_constraintTop_toBottomOf="@id/login_page__email_string"
                    app:layout_constraintBottom_toTopOf="@id/login_page__password_string" />

            <TextView
                    android:textColor="@color/main_dark_grey"
                    android:layout_marginTop="8dp"
                    android:id="@+id/login_page__password_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/login_page__email_edit_text"
                    app:layout_constraintBottom_toTopOf="@id/login_page__password_edit_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textSize="15sp" />

            <EditText
                    style="@style/fragment_profile_field_text"
                    android:id="@+id/login_page__password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    app:layout_constraintTop_toBottomOf="@id/login_page__password_string"
                    app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
            android:layout_marginTop="46dp"
            android:id="@+id/login_page__enter_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_page__login_card"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="5dp"
            style="@style/turquoise_btn" />

    <Button
            android:id="@+id/login_page__register_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_page__enter_button"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="5dp"
            style="@style/white_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>