<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:id="@+id/profile_page__arrow_left_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/back_btn"
            app:layout_constraintBottom_toTopOf="@id/rofile_page__name_surname_card"/>

    <androidx.cardview.widget.CardView
            android:id="@+id/profile_page__name_surname_card"
            style="@style/profile_card"
            android:layout_height="240dp"
            android:layout_width="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardBackgroundColor="#EFA3A3"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/login_page__email_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/login_page__email_edit_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

            <EditText
                    android:id="@+id/login_page__email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="name"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintTop_toBottomOf="@id/login_page__email_string"
                    app:layout_constraintBottom_toTopOf="@id/login_page__password_string"/>

            <TextView
                    android:id="@+id/login_page__password_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/login_page__email_edit_text"
                    app:layout_constraintBottom_toTopOf="@id/login_page__password_edit_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="20dp"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

            <EditText
                    android:id="@+id/login_page__password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@id/login_page__password_string"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>