<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:id="@+id/view_reservation_card__card"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/view_reservation_card__image"
                    android:layout_width="140dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/restaurant_placeholder"
                    android:scaleType="centerCrop" />

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toEndOf="@+id/view_reservation_card__image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp">

                <TextView
                        android:id="@+id/view_reservation_card__restaurant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/main_dark_color"
                        tools:text="Sempre"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:maxLines="1"
                        android:ellipsize="end" />

                <TextView
                        android:id="@+id/view_reservation_card__restaurant_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/view_reservation_card__restaurant_name"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textColor="@color/main_dark_color"
                        tools:text="ул.                                    Большая Дмитровка, 22, Москва (с1)"
                        android:textSize="11sp"
                        android:layout_marginTop="5dp"
                        android:maxLines="1"
                        android:ellipsize="end" />

                <LinearLayout
                        android:id="@+id/view_reservation_card__restaurant_tags"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:maxLines="1"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/view_reservation_card__restaurant_address"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="7dp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/view_reservation_card__restaurant_date_time_row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/view_reservation_card__restaurant_tags"
                        app:layout_constraintStart_toStartOf="parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="7dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:orientation="vertical"
                            android:layout_marginEnd="20dp">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/main_dark_color"
                                android:text="@string/date"
                                android:textSize="12sp"
                                android:textFontWeight="300" />

                        <TextView
                                android:id="@+id/view_reservation_card__date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/main_dark_color"
                                tools:text="16.07.2020"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/main_dark_color"
                                android:text="@string/time"
                                android:textSize="12sp"
                                android:textFontWeight="300" />

                        <TextView
                                android:id="@+id/view_reservation_card__time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/main_dark_color"
                                tools:text="20:30"
                                android:textSize="12sp"
                                android:textStyle="bold" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_reservation_card__restaurant_date_time_row"
                        android:orientation="vertical"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="7dp">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/main_dark_color"
                            android:text="@string/num_of_guests"
                            android:textSize="12sp"
                            android:textFontWeight="300" />

                    <TextView
                            android:id="@+id/view_reservation_card__guests_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/main_dark_color"
                            tools:text="6 человек"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>
